css/styles.css
:root {
    --dark-blue-color: hsl(233, 26%, 24%);
    --lime-green: hsl(136, 65%, 51%);
    --bright-cyan: hsl(192, 70%, 51%);

    --grayish-blue:hsl(233, 8%, 62%);
    --light-grayish-blue:hsl(220, 16%, 96%);
    --very-light-gray:hsl(0, 0%, 98%);
    --white:hsl(0, 0%, 100%);
  }
*{
    font-family: 'Public Sans', sans-serif;
}
body{
    margin: 0;
}
section{
    padding-left: 6%;
    padding-right: 6%;
}
.color-darkblue{
    color: var(--dark-blue-color);
}
.color-lightgray{
    color: var(--very-light-gray);
}
.color-grayishblue{
    color: var(--grayish-blue);
}
.color-white{
    color: var(--white);
}
.color-lightgrayishblue{
    color: var(--light-grayish-blue);
}

.d-flex{
    display: flex;
    
}
.flex-center{
    justify-content: space-between;
    align-items: center;
}

.s-14{
    font-size: 14px;
}
.s-18{
    font-size: 18px;
}
.s-21{
    font-size: 21px;
}
.s-48{
    font-size: 3.6rem;
}
.b-radius-4px{
    border-radius: 8px;
}
.btn-round{
    border-radius: 48px;
}
.space-x{
height: 1rem;
}
.space-2x{
    height: 2rem;
    }
.bg-gradient{
    background-image: linear-gradient(to  right, var(--lime-green), var(--bright-cyan));
}
.header nav ul{
    list-style: none;
}
.header nav ul li{
    padding: 0 15px ;
}
.nav-link{
    color: var(--grayish-blue);
    text-decoration: none;
}
.nav-link:hover{
    border-bottom: 2px solid var(--lime-green);
}
.action-btn{
    padding: 10px 21px;
    font-size: 16px;
}
button{
    border: none;
}
button:hover{
    cursor: pointer;
    opacity: 0.5;
}
/* Header */
.landing {
background-color: var(--very-light-gray);
padding: 0;
}
.landing .content{
    padding: 8% 6% ;
    max-width: 40%;
}
.landing .image{
    max-width: 60%;
    background-image: url('../images/bg-intro-desktop.svg');
}
.landing .image img{
   /* height: 100vh; */
   width: 100%;
}
.lighter-font{
    font-weight: 300;
}
.light-font{
    font-weight: 400;
}

/* Why section */
section.why{
    background-color: var(--light-grayish-blue);
}
.reasons{
    padding-top: 2% ;
    padding-bottom: 2% ;
   
}
.reason {
    padding-right: 4%;
}

/* blog secttion */
section.blog{
    background-color: var(--very-light-gray);
    padding-bottom: 4%;
}
.article{
    background-color: var(--white);
    min-width: 24%;
    margin-right: 3%;
}
.article-thumb img{
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    width: 100%;
    height: 182px;
}
.article-info{
    padding: 0 15px;
}

/* footer Styles */
section.footer{
background-color: var(--dark-blue-color);
padding: 2% 6%;
}
footer,footer div.content{
    justify-content: space-between;

}
footer .col-one{
    flex-direction: column;
    justify-content: space-between;
}
footer ul,.links{
    list-style: none;
    padding:0 ;
}
footer ul li {
    padding-right: 15px;
}
footer .link-item a{
    text-decoration: none;
    color: var(--grayish-blue);
}
.last-col {
    text-align: right;
}

